Sec18_Chap184-XXX-NOK: optimized test code